--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HUGGING_FACE_SUMMARIZATION_DEMO }}
-        run: git remote add space https://huggingface.co/spaces/rael/summarization-demo
+        run: git remote add space https://89rael:$HF@huggingface.co/spaces/rael/summarization-demo
       - name: Push to hub
         env:
           HF: ${{ secrets.HUGGING_FACE_SUMMARIZATION_DEMO }}
-        run: git push --force https://huggingface.co/spaces/rael/summarization-demo main
+        run: git push --force https://89rael:$HF@huggingface.co/spaces/rael/summarization-demo main
